--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,11 @@ description: "A single computer authority."
 
 header_pages:
   - index.md
-  - pages/about.md
+  - pages/pages.md
   - pages/post.md
   - pages/blog.md
+  - pages/idk.md
+  - pages/about.md
 
 lang: ko
 timezone: Asia/Seoul
@@ -16,7 +18,9 @@ footer: 'Find me on <a href="https://discord.com/users/480930947642949653">Disco
 plugins:
   - jekyll-seo-tag
 
-
+collections:
+  diary:
+    output: true
 
 csp:
   directives:
